# QB3

./: .gitignore  CMakeLists.txt  LICENSE  QB3.h  QB3.md  QB3.sln  QB3.vcxproj  QB3.vcxproj.filters  QB3common.h  QB3decode.h  QB3encode.h  QB3fwd.h  QB3tables.cpp  README.md  RQ3.sln  RQ3.vcxproj  RQ3.vcxproj.filters  SiBi.cpp  SiBi.sln  SiBi.vcxproj  SiBi.vcxproj.filters  bitmap.md  bitstream.h  bmap.cpp  bmap.h  build_tables.pyproj  cqb3.cpp  cqb3.md  denc.cpp  denc.h  qb3_tables.h  tables.py  test_qb3.cpp  test_rq3.cpp
DCT/: DCT.vcxproj  DCT.vcxproj.filters  DTC_test.cpp  cpp.hint
MSVC/: QB3.sln  QB3.vcxproj  QB3.vcxproj.filters  QB3lib.vcxproj  QB3lib.vcxproj.filters  WinBuildMacro.props  build_tables.pyproj  cqb3.vcxproj  cqb3.vcxproj.filters
QB3lib/: CMakeLists.txt  Q3Bencode.cpp  Q3Bmain.cpp  QB3.h  QB3algo.h  QB3common.h  QB3decode.cpp  QB3decode.h  QB3encode.cpp  QB3encode.h  QB3lib.vcxproj  QB3lib.vcxproj.filters  QB3tables.cpp  QB3tables.h  bitstream.h
attic/: imagecompression.ipynb  tables.py  world.cpp
cqb3/: cqb3.vcxproj  cqb3.vcxproj.filters
doc/: QB3.md  changeLog.md  cqb3.md
docs/: index.html  qb3-wasm.mjs  qb3-wasm.wasm
performance/: AMD7R32-results.tgz  CID22_savings.csv  CID22_sizes.csv  G2-results.tgz  cid22.ipynb  performance.md
tests/: G3-results.tgz  imagecompression.ipynb  test-results.tgz
wasm/: build_wasm  index.html  post.js  qb3dec.js  qb3dec.mjs  qb3decapi.cpp  qb3decapi.h  run_me
